--- a/src/components/common/PWAManager.astro
+++ b/src/components/common/PWAManager.astro
@@ -26,7 +26,7 @@ class PWAManager {
   }
 
   async registerServiceWorker() {
-    if ('serviceWorker' in navigator) {
+    if ('serviceWorker' in navigator && (location.protocol === 'https:' || location.hostname === 'localhost')) {
       try {
         const registration = await navigator.serviceWorker.register('/sw.js');
         console.log('Service worker registered:', registration);
